# tap-sleeper

./: .gitignore  .pre-commit-config.yaml  README.md  meltano.yaml  pyproject.toml  tap-sleeper.sh  tox.ini
.github/workflows/: ci_workflow.yml  codeql-analysis.yml  release.yml  super-linter.yml  test-pypi.yml  test-tap.yml
tap_sleeper/: client.py  streams.py  tap.py
tap_sleeper/schemas/: __init__.py  league.py  players.py  sport_state.py  trending_players.py
tap_sleeper/tests/: __init__.py  test_core.py
