[tool.poetry]
name = "tap-sleeper"
version = "0.0.1"
description = "`tap-sleeper` is a Singer tap for Sleeper, built with the Meltano SDK for Singer Taps."
authors = ["Collin Prather"]
keywords = [
    "ELT",
    "Sleeper",
    "Football"
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
singer-sdk = "^0.3.17"

[tool.poetry.dev-dependencies]
pre-commit = "^2.16.0"
pytest = "^6.2.5"
isort = "^5.10.1"
black = "^21.9b0"
mypy = "^0.910"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "tap_sleeper"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-sleeper = 'tap_sleeper.tap:TapSleeper.cli'
